--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hi! This is my second webapp which is being developed.
+Hi! This is my second webapp which is being developed and being modified in GitHub.
